# ubuntu_DSP

./: .gitignore  flake.nix  readme_from_a_fresh_linux.md  readme_from_a_fresh_ubuntu.md
Portable/: CMakeLists.txt  README.md
Portable/apps/: 400hz_on_all_channels.cpp  calculate_single_delay.cpp  chega_de_saudade_stems_32_outputs.cpp  cuda_device_query.cu  delay_courbe_detector.cpp  detect_timming.cpp  infer_topology_and_save_it.cpp  infer_topology_from_infered_topology_and_save_it.cpp  multi_conv_benchmarking.cpp  simple_cuda_less_naive_convolution.cu  simple_cuda_naive_convolution.cu  simple_cuda_portaudio.cu  sound_device_query.cpp  sound_device_test.cpp  superpose_signals_and_responses.cpp  test_channels.cpp  test_installation.cpp
Portable/include/portable/: audio_helpers.h  build_config.h.in  csv_utils.h  impulse_response_analysis.h  mock_device_registry.h  mock_devices.h  mockportaudio.h  partitioned_fft_convolver.h  plotting.h  recommended_defines.h  signal.h  sound_device_query_config.h  stream_status.h  usefull_singnals.h
Portable/scripts/: plot.py  plot_calculate_single_delay.py  plot_delay_courbe_detector.py  plot_detect_timming_results.py  plot_superpose_signals_and_responses.py  show_callback_timing.py  show_exact_convolution_validation.py  show_topology_matrix.py
Portable/src/: mock_device_registry.cpp  mockportaudio.cpp  signal.cpp
